# document_analysis

./: .gitignore  README.md  app.py  cursor_document_analysis_tool_for_marke.md  pyproject.toml  requirements.txt  run_ui.sh
config/: benchmarking_framework.yaml
config/jurisdictions/: eu_prriips.yaml  uk_fca.yaml  us_sec.yaml
docs/: DOCUMENT_BENCHMARKING_PROJECT.md  indesign_style_guide.md  redesigned_factsheet.html  redesigned_factsheet_indesign.xml  setup_indesign_styles.jsx
src/document_analysis_tool/: __init__.py  cli.py
src/document_analysis_tool/accessibility/: __init__.py  checks.py
src/document_analysis_tool/benchmarking/: __init__.py  esg_detector.py  scoring.py  taxonomy.py
src/document_analysis_tool/compliance/: __init__.py  engine.py
src/document_analysis_tool/database/: __init__.py  auth.py  db.py  library.py
src/document_analysis_tool/ingestion/: __init__.py  docx_parser.py  models.py  pdf_parser.py
src/document_analysis_tool/metrics/: __init__.py  reporting.py
